add presenter without 3 fields

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <title>React App</title>
   </head>
   <body>
+    <script>
+      var formId = "5c4f0a4379277d1e142c36ca";
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
